# cookiecutter-pyproject

./: cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.name}}/: pyproject.toml
